--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
@@ -50,7 +51,7 @@
       ]
     },
     "parserOptions": {
-        "sourceType": "module"
+      "sourceType": "module"
     }
   },
   "dependencies": {
